--- a/cjaasBrowserSDK/demo/index.html
+++ b/cjaasBrowserSDK/demo/index.html
@@ -55,9 +55,12 @@
       cjaas("identify", `personID`, "Person Name"); 
 
       //sending data {"title": "Outliers", "price": 50} to server. Track event : User buys book
-      cjaas("track", "User buys book", {"title": "Name_of_the_book", "price": 50});
-      cjaas("track", "User buys book", {"title": "Name_of_the_book", "price": 70});
-    
+      setTimeout(()=>{
+        console.log("fired the event")
+        cjaas("track", "User buys book", {"title": "Outliers", "price": 50})},
+      20000);
+      cjaas("track", "User buys book", {"title": "My Life in Full", "price": 70});
+     
     </script>
 
     <script>
